--- a/test-output/old/DOTWsuite/methods-alphabetical.html
+++ b/test-output/old/DOTWsuite/methods-alphabetical.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>DOTWsuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="acb575">  <td>17/11/21 12:54:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Accomodation_Filterrates_Inactivaterate.getResult(org.testng.ITestResult)[pri:0, instance:automationFramework.Accomodation_Filterrates_Inactivaterate@2781e022]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1897115967</td>   <td></td> </tr>
-<tr bgcolor="acb575">  <td>17/11/21 12:53:20</td>   <td>-67967</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Accomodation_Filterrates_Inactivaterate.pushrate(java.lang.String)[pri:0, instance:automationFramework.Accomodation_Filterrates_Inactivaterate@2781e022]">pushrate</td> 
-  <td>main@1897115967</td>   <td></td> </tr>
+<tr bgcolor="6ae0ad">  <td>17/11/22 13:00:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Accomodation_Filterrates_Inactivaterate.getResult(org.testng.ITestResult)[pri:0, instance:automationFramework.Accomodation_Filterrates_Inactivaterate@6ee52dcd]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@699780352</td>   <td></td> </tr>
+<tr bgcolor="6ae0ad">  <td>17/11/22 13:00:24</td>   <td>-2308</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Accomodation_Filterrates_Inactivaterate.pushrate(java.lang.String)[pri:0, instance:automationFramework.Accomodation_Filterrates_Inactivaterate@6ee52dcd]">pushrate</td> 
+  <td>main@699780352</td>   <td></td> </tr>
 </table>
