--- a/test-output/index.html
+++ b/test-output/index.html
@@ -23,7 +23,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -37,7 +37,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-DOTWsuite">
-              <span class="suite-name border-failed">DOTWsuite</span>
+              <span class="suite-name border-passed">DOTWsuite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -90,21 +90,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method, 1 failed,   </span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-DOTWsuite" class="hide-methods failed suite-DOTWsuite"> (hide)</a> <!-- hide-methods failed suite-DOTWsuite -->
-                      <a href="#" panel-name="suite-DOTWsuite" class="show-methods failed suite-DOTWsuite"> (show)</a> <!-- show-methods failed suite-DOTWsuite -->
+                    <span class="method-list-title passed">Passed methods</span>
+                    <span class="show-or-hide-methods passed">
+                      <a href="#" panel-name="suite-DOTWsuite" class="hide-methods passed suite-DOTWsuite"> (hide)</a> <!-- hide-methods passed suite-DOTWsuite -->
+                      <a href="#" panel-name="suite-DOTWsuite" class="show-methods passed suite-DOTWsuite"> (show)</a> <!-- show-methods passed suite-DOTWsuite -->
                     </span>
-                    <div class="method-list-content failed suite-DOTWsuite">
+                    <div class="method-list-content passed suite-DOTWsuite">
                       <span>
-                        <img width="3%" src="failed.png"/>
+                        <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-DOTWsuite" title="automationFramework.Accomodation_Filterrates_Inactivaterate" hash-for-method="pushrate(FF)">pushrate(FF)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content failed suite-DOTWsuite -->
+                    </div> <!-- method-list-content passed suite-DOTWsuite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -116,9 +116,9 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-DOTWsuite" class="panel DOTWsuite">
-          <div class="suite-DOTWsuite-class-failed">
+          <div class="suite-DOTWsuite-class-passed">
             <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
+              <img src="passed.png"/>
               <span class="class-name">automationFramework.Accomodation_Filterrates_Inactivaterate</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -128,31 +128,10 @@
                   </a> <!-- pushrate(FF) -->
                   <span class="method-name">pushrate</span>
                   <span class="parameters">(FF)</span>
-                  <div class="stack-trace">java.lang.NoClassDefFoundError: org/apache/http/auth/Credentials
-	at org.openqa.selenium.remote.HttpCommandExecutor.getDefaultClientFactory(HttpCommandExecutor.java:96)
-	at org.openqa.selenium.remote.HttpCommandExecutor.&lt;init&gt;(HttpCommandExecutor.java:70)
-	at org.openqa.selenium.remote.HttpCommandExecutor.&lt;init&gt;(HttpCommandExecutor.java:58)
-	at org.openqa.selenium.firefox.internal.NewProfileExtensionConnection.start(NewProfileExtensionConnection.java:87)
-	at org.openqa.selenium.firefox.FirefoxDriver.startClient(FirefoxDriver.java:271)
-	at org.openqa.selenium.remote.RemoteWebDriver.&lt;init&gt;(RemoteWebDriver.java:119)
-	at org.openqa.selenium.firefox.FirefoxDriver.&lt;init&gt;(FirefoxDriver.java:218)
-	at org.openqa.selenium.firefox.FirefoxDriver.&lt;init&gt;(FirefoxDriver.java:211)
-	at org.openqa.selenium.firefox.FirefoxDriver.&lt;init&gt;(FirefoxDriver.java:207)
-	at org.openqa.selenium.firefox.FirefoxDriver.&lt;init&gt;(FirefoxDriver.java:120)
-	at lib.DriverAndObjectDetails.CreateDriver(DriverAndObjectDetails.java:62)
-	at automationFramework.Accomodation_Filterrates_Inactivaterate.pushrate(Accomodation_Filterrates_Inactivaterate.java:66)
-Caused by: java.lang.ClassNotFoundException: org.apache.http.auth.Credentials
-	at java.net.URLClassLoader.findClass(URLClassLoader.java:381)
-	at java.lang.ClassLoader.loadClass(ClassLoader.java:424)
-	at sun.misc.Launcher$AppClassLoader.loadClass(Launcher.java:331)
-	at java.lang.ClassLoader.loadClass(ClassLoader.java:357)
-	... 36 more
-... Removed 24 stack frames
-</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-DOTWsuite-class-failed -->
+          </div> <!-- suite-DOTWsuite-class-passed -->
         </div> <!-- panel DOTWsuite -->
         <div panel-name="test-xml-DOTWsuite" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -210,12 +189,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'pushrate')
 data.setCell(0, 2, 'automationFramework.Accomodation_Filterrates_Inactivaterate')
-data.setCell(0, 3, 2308);
+data.setCell(0, 3, 68044);
 window.suiteTableData['DOTWsuite']= { tableData: data, tableDiv: 'times-div-DOTWsuite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-DOTWsuite">
               </div> <!-- times-div-DOTWsuite -->
             </div> <!-- times-div -->
@@ -243,15 +222,17 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">automationFramework.Accomodation_Filterrates_Inactivaterate</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
                 <span class="method-name">pushrate(FF)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">getResult([TestResult name=pushrate status=FAILURE method=Accomodation_Filterrates_Inactivaterate.pushrate(jav...)</span>
-                <span class="method-start">2308 ms</span>
+                <span class="method-name">getResult([TestResult name=pushrate status=SUCCESS method=Accomodation_Filterrates_Inactivaterate.pushrate(jav...)</span>
+                <span class="method-start">68044 ms</span>
               </div> <!-- configuration-method after -->
+              <div class="configuration-test after">
+                <span class="method-name">afterTest</span>
+                <span class="method-start">68059 ms</span>
+              </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
