--- a/test-output/index.html
+++ b/test-output/index.html
@@ -23,7 +23,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -37,7 +37,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-DOTWsuite">
-              <span class="suite-name border-passed">DOTWsuite</span>
+              <span class="suite-name border-failed">DOTWsuite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -90,21 +90,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">1 method, 1 failed,   </span>
                   </li>
                   <li>
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-DOTWsuite" class="hide-methods passed suite-DOTWsuite"> (hide)</a> <!-- hide-methods passed suite-DOTWsuite -->
-                      <a href="#" panel-name="suite-DOTWsuite" class="show-methods passed suite-DOTWsuite"> (show)</a> <!-- show-methods passed suite-DOTWsuite -->
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-DOTWsuite" class="hide-methods failed suite-DOTWsuite"> (hide)</a> <!-- hide-methods failed suite-DOTWsuite -->
+                      <a href="#" panel-name="suite-DOTWsuite" class="show-methods failed suite-DOTWsuite"> (show)</a> <!-- show-methods failed suite-DOTWsuite -->
                     </span>
-                    <div class="method-list-content passed suite-DOTWsuite">
+                    <div class="method-list-content failed suite-DOTWsuite">
                       <span>
-                        <img width="3%" src="passed.png"/>
+                        <img width="3%" src="failed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-DOTWsuite" title="automationFramework.Accomodation_Filterrates_Inactivaterate" hash-for-method="pushrate(FF)">pushrate(FF)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content passed suite-DOTWsuite -->
+                    </div> <!-- method-list-content failed suite-DOTWsuite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -116,9 +116,9 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-DOTWsuite" class="panel DOTWsuite">
-          <div class="suite-DOTWsuite-class-passed">
+          <div class="suite-DOTWsuite-class-failed">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
+              <img src="failed.png"/>
               <span class="class-name">automationFramework.Accomodation_Filterrates_Inactivaterate</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -128,10 +128,14 @@
                   </a> <!-- pushrate(FF) -->
                   <span class="method-name">pushrate</span>
                   <span class="parameters">(FF)</span>
+                  <div class="stack-trace">java.lang.AssertionError: expected [true] but found [false]
+	at automationFramework.Accomodation_Filterrates_Inactivaterate.pushrate(Accomodation_Filterrates_Inactivaterate.java:172)
+... Removed 28 stack frames
+</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-DOTWsuite-class-passed -->
+          </div> <!-- suite-DOTWsuite-class-failed -->
         </div> <!-- panel DOTWsuite -->
         <div panel-name="test-xml-DOTWsuite" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -189,7 +193,7 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'pushrate')
 data.setCell(0, 2, 'automationFramework.Accomodation_Filterrates_Inactivaterate')
-data.setCell(0, 3, 68092);
+data.setCell(0, 3, 70957);
 window.suiteTableData['DOTWsuite']= { tableData: data, tableDiv: 'times-div-DOTWsuite'}
 return data;
 }
@@ -222,16 +226,18 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">automationFramework.Accomodation_Filterrates_Inactivaterate</div> <!-- chronological-class-name -->
               <div class="test-method">
+                <img src="failed.png">
+                </img>
                 <span class="method-name">pushrate(FF)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">getResult([TestResult name=pushrate status=SUCCESS method=Accomodation_Filterrates_Inactivaterate.pushrate(jav...)</span>
-                <span class="method-start">68093 ms</span>
+                <span class="method-name">getResult([TestResult name=pushrate status=FAILURE method=Accomodation_Filterrates_Inactivaterate.pushrate(jav...)</span>
+                <span class="method-start">70957 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-test after">
                 <span class="method-name">afterTest</span>
-                <span class="method-start">68099 ms</span>
+                <span class="method-start">70973 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
